# vue-helper

./: .gitignore  .vscodeignore  package-lock.json  package.json  package.nls.json  package.nls.zh-CN.json  vue-helper-4.2.2.vsix  vue-helper-core.node
.claude/: settings.local.json
rust-core/: Cargo.toml
rust-core/src/: assist.rs  completion.rs  definition.rs  hover.rs  lib.rs  traverse.rs  util.rs
rust-core/src/framework_data/: attribute.rs  document.rs  global_attribute.rs  js_tag.rs  mod.rs  snippets_html.rs  snippets_js.rs  tag.rs
scripts/: build.js
src/: assist.ts  client.ts  explorer.ts  framework.ts  monitor.ts  native.ts
src/util/: util.ts
